MDEV-10731: Wrong NULL match results in "Subquery returns more than 1 row" (error code 1242)

NOT NULL predicate was not added to tables in case of an update query having a subquery.